try this to fix ios safari scrollbars still showing up

--- a/src/screens/play/PlayScreen.module.css
+++ b/src/screens/play/PlayScreen.module.css
@@ -120,6 +120,7 @@
   scrollbar-width: none;
   scrollbar-color: transparent transparent;
   -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 .rowContents::-webkit-scrollbar {
